# rule-engine-with-ast

./: README.md
backend/: main.py  pyproject.toml
backend/rule_engine/: ast_utils.py  database.py  main.py  parser_utils.py
backend/tests/: test_parser.py  test_tree_traversal.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/components/: ASTTree.tsx
frontend/app/services/: api.ts
